# LTB2021

./: README.md
C_Synthetic_Data_Generator/: Advantech_Accelerometer.cpp  Advantech_Accelerometer.h  CMakeLists.palmetto  CMakeLists.txt  CharDataPoint.cpp  CharDataPoint.h  DataPoint.cpp  DataPoint.h  FloatDataPoint.cpp  FloatDataPoint.h  IntegerDataPoint.cpp  IntegerDataPoint.h  MIOTY.cpp  MIOTY.h  README.md  Raspberry_Pi_Accelerometer.cpp  Raspberry_Pi_Accelerometer.h  Sensor.cpp  Sensor.h  Size2048.cpp  Size2048.h  Size32768.cpp  Size32768.h  Size4096.cpp  Size4096.h  Size512.cpp  Size512.h  Size8192.cpp  Size8192.h  SizeCustom.cpp  SizeCustom.h  Synthetic_Data_Generator.cpp  ValuesDataPoint.cpp  ValuesDataPoint.h
C_Synthetic_Data_Generator/Tests/: ArgsTestCases.txt  TestsAfterRefactoring.txt  valgrind_output.txt
C_Synthetic_Data_Generator/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
C_Synthetic_Data_Generator/pareto_module/: how_to_use_pareto_module.cc  pareto_distribution.h
bash_scripts/: README.md  connection_strings.list  copy_results.sh  create_devices.sh  get_connection_strings.sh  parameters.list  pareto_latencies.csv  per_node_cleanup.sh  per_node_setup.sh  python_run_sensor.sh  run_batch_sensors.sh  run_multiple_sensors.sh  run_one_sensor.sh  setup-aws.sh
bash_scripts/analyze/: 3_editions_10_devices_4_message_sizes_All_Trials.ipynb  3_editions_10_devices_4_message_sizes_run_2_All_Trials.ipynb  4_partition_levels_1000_devices.ipynb  4_partition_levels_1_device.ipynb  4_partition_levels_1_device_run_2.ipynb  Original_partition_1_device.ipynb  README.md  average_trials.py  check_imt.py  concat_all_tier.sh  concat_csv.sh  environment.yml  full_multi_node_2_units.ipynb  multi_node1.ipynb  partition_10_devices.ipynb  partition_1_device_AWS.ipynb  three_node.ipynb
experiments/: kstest.py
experiments/cloud_lab_validation/: 512_latencies.csv  pareto_latencies.csv  tcpdump.raw  tcpdump.raw.50712.csv  tcpdump.raw.pareto  tcpdump.raw.pareto.2.100  tcpdump.raw.pareto.2.50716.csv  test.py
experiments/output_validation/: parse_tcpdump.py  parse_tcpdump.sh  summary.py  tcpdump.50700.csv  tcpdump.raw  test_sensor.sh
pbs/: all_out.pbs  long_params.list  msg_size.pbs  multi_node_experiment.pbs  multi_node_experiment.template  one_node_experiment.pbs  pareto.pbs  partitions.pbs  three_tier_experiment.pbs
pbs/multi_node_series/: create_pbs.sh  run_chain.sh
results/: push.sh
(+69854 files in other folders)
